anime_images_react/anime-images-react-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: anime-images-react-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/anime-images-react-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/anime-images-react-default: "true"
